modules/wycs/tests/valid/test_set_14.wyal
define NatSet({int} xs) is:
  forall (int x in xs): 
    x >= 0

define PosSet({int} xs) is:
  forall (int x in xs): 
    x > 0

assert:
  forall ({int} xs):
    PosSet(xs) ==> NatSet(xs)
